W-14799865: Update dependency commons-io:commons-io to v2.15.1 (#13167)
(cherry picked from commit e1ad266c75b7b77e37d0687d4e0e0d03026db8a5)