@@ -20,6 +20,7 @@
             --module-path=${org.yaml:snakeyaml:jar}
             --add-modules=net.bytebuddy.agent,org.yaml.snakeyaml
             --add-reads=org.mule.runtime.spring.config=org.yaml.snakeyaml
+            --add-reads=org.mule.runtime.spring.config=org.apache.commons.io
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.api.processor=ALL-UNNAMED
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.privileged.component=ALL-UNNAMED
             --add-opens=org.mule.runtime.core/org.mule.runtime.core.privileged.exception=ALL-UNNAMED
